# folly

./: folly.cabal
Folly/: DSL.hs  FOL.hs  TPTP.hs
examples/: .gitignore  BezoutBar.hs  Test.hs
