name:                folly
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Dan Rosén
maintainer:          danr@chalmers.se
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Folly.FOL, Folly.TPTP, Folly.DSL
  other-extensions:    FlexibleInstances, TemplateHaskell, OverloadedStrings, GeneralizedNewtypeDeriving, TypeSynonymInstances
  build-depends:       base >=4.6 && <4.7, pretty >=1.1 && <1.2, mtl >=2.1 && <2.2
  default-language:    Haskell2010
